.kubernetes/tls-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tls-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tls-app
  template:
    metadata:
      labels:
        app: tls-app
    spec:
      containers:
      - name: tls-app
        image: tls-container
        ports:
        - containerPort: 80
        volumeMounts:
        - name: crypto-config
          mountPath: /usr/share/nginx/crypto-mount
      volumes:
      - name: crypto-config
        hostPath:
          path: /var/www/jakob-wagner.com
