.kubernetes/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website-container
        image: deerfreak/website:main
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
        - name: regcred
