.kubernetes/tls-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tls-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: tls-app
