.kubernetes/website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - jakob-wagner.com
      secretName: jakob-wagner-com-tls
  rules:
  - host: www.jakob-wagner.com
    http:
      paths:
      - path: /.well-known
        pathType: ImplementationSpecific
        backend:
          service:
            name: tls-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service
            port:
              number: 80
